[package]
name = "bar1239"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version = "1.19.2", features = ["full"] }
futures-async-stream = "0.2.2"
futures = "0.3.1"
inotify = "0.11.0"
chrono = "0.4.10"
battery = "0.7.5"
libpulse-binding = "2.16.0"

[profile.release]
codegen-units = 1
lto = true
