[package]
name = "bar1239"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version = "1.19.2", features = ["full"] }
futures-async-stream = "0.2.2"
futures = "0.3.1"
inotify = "0.11.0"
chrono = "0.4.10"
battery = "0.7.5"
pipewire-native = "0.1.3"
pipewire-native-spa = "0.1.3"

[patch.crates-io]
# TODO: Remove once there's a release with https://gitlab.freedesktop.org/pipewire/pipewire-native-rs/-/merge_requests/8
pipewire-native-spa = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-native-rs.git" }
